fix: improve the responsiveness on smaller viewports

--- a/src/components/FAQ/FAQ.module.scss
+++ b/src/components/FAQ/FAQ.module.scss
@@ -35,4 +35,8 @@
   gap: 1rem 2rem;
   width: 100%;
   max-width: 80rem;
+
+  @media (max-width: 1250px) {
+    flex-direction: column;
+  }
 }
