--- a/src/components/FAQ/Question/Question.module.scss
+++ b/src/components/FAQ/Question/Question.module.scss
@@ -10,10 +10,78 @@
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 
-  &::before {
+  &:last-child {
+    margin-right: auto;
+  }
+
+  &:hover {
+    background-color: hsla(0, 0%, 100%, 0.2);
+
+    .questionInnerContainer {
+      &::before,
+      &::after {
+        background-color: var(--white);
+      }
+    }
+  }
+
+  @media (max-width: 1250px) {
+    max-width: 50rem;
+    align-self: auto;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.questionContainer {
+  max-height: 3.5rem;
+
+  @media (max-width: 650px) {
+    max-height: 4rem;
+  }
+}
+
+.questionContainerOpen {
+  max-height: 15rem;
+
+  @media (max-width: 650px) {
+    max-height: 25rem;
+  }
+
+  .questionInnerContainer {
+    &::before {
+      transform: translate(0) rotate(-180deg);
+    }
+
+    &::after {
+      transform: translate(0);
+    }
+
+    &::before,
+    &::after {
+      background-color: var(--white);
+    }
+  }
+
+  .answer {
+    transform: translate(0);
+  }
+}
+
+.questionInnerContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
+
+  &::before,
+  &::after {
     position: absolute;
-    top: 25px;
-    left: 15px;
+    top: 10px;
+    left: -40px;
     content: "";
     width: 25px;
     height: 4px;
@@ -23,57 +91,8 @@
   }
 
   &::after {
-    position: absolute;
-    top: 25px;
-    left: 15px;
-    content: "";
-    width: 25px;
-    height: 4px;
-    transition: all 0.3s ease-in-out;
-    background-color: var(--black);
     transform: translate(0);
   }
-
-  &:last-child {
-    margin-right: auto;
-  }
-
-  &:hover {
-    background-color: hsla(0, 0%, 100%, 0.2);
-
-    &::before,
-    &::after {
-      background-color: var(--white);
-    }
-  }
-}
-
-.questionContainer {
-  max-height: 3.5rem;
-}
-
-.questionContainerOpen {
-  max-height: 15rem;
-
-  &::before {
-    transform: translate(0) rotate(-180deg);
-  }
-
-  &::after {
-    transform: translate(0);
-  }
-
-  &::before,
-  &::after {
-    background-color: var(--white);
-  }
-}
-
-.questionInnerContainer {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 2rem;
 }
 
 .questionIcon {
@@ -84,6 +103,10 @@
   font-family: "AlegreyaSans", sans-serif;
   font-size: clamp(1.1rem, 2vw, 1.4rem);
   margin-bottom: 1rem;
+
+  @media (max-width: 650px) {
+    margin-bottom: 1.7rem;
+  }
 }
 
 .answer {
